--- a/index.html
+++ b/index.html
@@ -3,62 +3,251 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заявка</title>
+    <title>Подать заявку | PLAYLAND</title>
+    <!-- Подключение Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Подключение Font Awesome для иконок -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <!-- Подключение particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <style>
+        /* Общий стиль страницы */
         body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
+            margin: 0;
+            overflow: hidden;
+            font-family: 'Arial', sans-serif;
+            background: url('https://i.imgur.com/xyz1234.jpg') no-repeat center center fixed; /* Текстура травы */
+            background-size: cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            position: relative;
+            color: white;
+        }
+        canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: -1;
+        }
+        .form-container {
+            background: rgba(0, 0, 0, 0.7); /* Прозрачный фон */
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+            width: 100%;
+            max-width: 500px;
+            text-align: center;
+            position: relative;
+            animation: fadeIn 1s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        h2 {
+            font-family: 'Courier New', monospace; /* Пиксельный шрифт */
+            font-size: 28px;
+            color: #ffcc00; /* Цвет как у золотых блоков */
+            text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00;
+            margin-bottom: 20px;
+        }
+        label {
+            font-weight: bold;
+            color: #ffffff;
+            text-align: left;
+            display: block;
+            margin-bottom: 5px;
         }
         input, textarea {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
+            padding: 12px;
+            margin-bottom: 15px;
+            border: 2px solid #ffcc00;
             border-radius: 5px;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            transition: all 0.3s ease-in-out;
+        }
+        input:focus, textarea:focus {
+            border-color: #00ff00; /* Цвет как у изумрудных блоков */
+            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+            transform: scale(1.02);
         }
         button {
-            padding: 10px 20px;
-            background-color: #007bff;
+            width: 100%;
+            padding: 14px;
+            font-size: 18px;
+            background: linear-gradient(135deg, #ffcc00, #ff9900); /* Градиент как у золотых блоков */
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            position: relative;
+            overflow: hidden;
+        }
+        button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.3);
+            transition: left 0.3s ease-in-out;
+        }
+        button:hover::before {
+            left: 100%;
         }
         button:hover {
-            background-color: #0056b3;
+            transform: scale(1.05);
+            box-shadow: 0 10px 20px rgba(255, 204, 0, 0.5);
+        }
+        button:active {
+            transform: scale(0.98);
+        }
+        .portal {
+            position: absolute;
+            bottom: -100px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 150px;
+            height: 200px;
+            background: linear-gradient(180deg, #0000ff, #00ffff, #0000ff);
+            border-radius: 10px;
+            opacity: 0;
+            animation: portal 1s ease-in-out forwards;
+        }
+        @keyframes portal {
+            0% {
+                opacity: 0;
+                transform: translateY(0);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(-50px);
+            }
+        }
+        .loading-spinner {
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 40px;
+            height: 40px;
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-top: 4px solid #ffcc00;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
     </style>
 </head>
 <body>
-    <h2>Подать заявку</h2>
-    <form id="applicationForm">
-        <label for="nickname">Никнейм:</label>
-        <input type="text" id="nickname" name="nickname" required>
+    <!-- Particles.js Canvas -->
+    <canvas id="particles-js"></canvas>
 
-        <label for="discord">Discord-аккаунт:</label>
-        <input type="text" id="discord" name="discord" required>
+    <div class="form-container">
+        <h2>PLAYLAND</h2>
+        <p style="font-family: 'Courier New', monospace; font-size: 16px;">Подай заявку и присоединяйся к приключению!</p>
+        <form id="applicationForm">
+            <div class="mb-3">
+                <label for="nickname" class="form-label">Никнейм:</label>
+                <input type="text" class="form-control" id="nickname" name="nickname" required>
+            </div>
+            <div class="mb-3">
+                <label for="discord" class="form-label">Discord-аккаунт:</label>
+                <input type="text" class="form-control" id="discord" name="discord" required>
+            </div>
+            <div class="mb-3">
+                <label for="reason" class="form-label">Почему ты хочешь присоединиться?</label>
+                <textarea class="form-control" id="reason" name="reason" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-sign-in-alt me-2"></i>Отправить заявку
+            </button>
+            <div class="loading-spinner" id="loadingSpinner"></div>
+        </form>
+        <div class="portal" id="portal"></div>
+    </div>
 
-        <label for="reason">Причина:</label>
-        <textarea id="reason" name="reason" rows="4" required></textarea>
-
-        <button type="submit">Отправить</button>
-    </form>
-
+    <!-- Подключение Telegram Web App API -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
+        // Настройка particles.js
+        particlesJS('particles-js', {
+            particles: {
+                number: { value: 80, density: { enable: true, value_area: 800 } },
+                color: { value: '#ffffff' },
+                shape: { type: 'circle' },
+                opacity: { value: 0.5, random: false, anim: { enable: false } },
+                size: { value: 3, random: true, anim: { enable: false } },
+                line_linked: { enable: true, distance: 150, color: '#ffffff', opacity: 0.4, width: 1 },
+                move: { enable: true, speed: 2, direction: 'none', random: false, straight: false, out_mode: 'out' }
+            },
+            interactivity: {
+                detect_on: 'canvas',
+                events: { onhover: { enable: true, mode: 'repulse' }, onclick: { enable: true, mode: 'push' } },
+                modes: { repulse: { distance: 100, duration: 0.4 }, push: { particles_nb: 4 } }
+            },
+            retina_detect: true
+        });
+
         const form = document.getElementById('applicationForm');
+        const loadingSpinner = document.getElementById('loadingSpinner');
+        const portal = document.getElementById('portal');
+
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
 
+            // Показываем спиннер загрузки
+            loadingSpinner.style.display = 'block';
+
             // Получаем данные из формы
-            const nickname = document.getElementById('nickname').value;
-            const discord = document.getElementById('discord').value;
-            const reason = document.getElementById('reason').value;
+            const nickname = document.getElementById('nickname').value.trim();
+            const discord = document.getElementById('discord').value.trim();
+            const reason = document.getElementById('reason').value.trim();
+
+            // Проверяем, что все поля заполнены
+            if (!nickname || !discord || !reason) {
+                alert("Пожалуйста, заполните все поля.");
+                loadingSpinner.style.display = 'none';
+                return;
+            }
+
+            // Анимация портала
+            setTimeout(() => {
+                portal.style.display = 'block';
+                const audio = new Audio('https://www.soundjay.com/misc/sounds/portal-open.mp3'); // Звук открытия портала
+                audio.play();
+            }, 500);
 
             // Отправляем данные в бот через Telegram Web App
             const data = { nickname, discord, reason };
+            console.log("Отправленные данные:", data); // Логирование в консоль
             Telegram.WebApp.sendData(JSON.stringify(data));
             Telegram.WebApp.close();
+
+            // Скрываем спиннер после отправки
+            setTimeout(() => {
+                loadingSpinner.style.display = 'none';
+            }, 1000);
         });
     </script>
 </body>
