--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Подключение Font Awesome для иконок -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- Подключение particles.js -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <style>
         /* Общий стиль страницы */
         body {
@@ -25,12 +23,37 @@
             position: relative;
             color: white;
         }
-        canvas {
+
+        /* Падающие блоки */
+        .falling-blocks {
             position: absolute;
-            top: 0;
+            top: -100px;
             left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
             z-index: -1;
         }
+        .block {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background: url('https://i.imgur.com/xyz1234.png'); /* Текстура блока */
+            background-size: cover;
+            animation: fall linear infinite;
+        }
+        @keyframes fall {
+            0% {
+                transform: translateY(-100%);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh);
+                opacity: 0;
+            }
+        }
+
+        /* Форма */
         .form-container {
             background: rgba(0, 0, 0, 0.7); /* Прозрачный фон */
             padding: 40px;
@@ -52,6 +75,8 @@
                 transform: translateY(0);
             }
         }
+
+        /* Заголовок */
         h2 {
             font-family: 'Courier New', monospace; /* Пиксельный шрифт */
             font-size: 28px;
@@ -59,6 +84,8 @@
             text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00;
             margin-bottom: 20px;
         }
+
+        /* Поле ввода */
         label {
             font-weight: bold;
             color: #ffffff;
@@ -81,6 +108,8 @@
             box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
             transform: scale(1.02);
         }
+
+        /* Кнопка */
         button {
             width: 100%;
             padding: 14px;
@@ -114,28 +143,8 @@
         button:active {
             transform: scale(0.98);
         }
-        .portal {
-            position: absolute;
-            bottom: -100px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 150px;
-            height: 200px;
-            background: linear-gradient(180deg, #0000ff, #00ffff, #0000ff);
-            border-radius: 10px;
-            opacity: 0;
-            animation: portal 1s ease-in-out forwards;
-        }
-        @keyframes portal {
-            0% {
-                opacity: 0;
-                transform: translateY(0);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(-50px);
-            }
-        }
+
+        /* Спиннер загрузки */
         .loading-spinner {
             display: none;
             position: absolute;
@@ -157,11 +166,54 @@
                 transform: rotate(360deg);
             }
         }
+
+        /* Логотип */
+        .logo-animation {
+            position: absolute;
+            bottom: -100px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 150px;
+            opacity: 0;
+            animation: logo-rise 1s ease-in-out forwards;
+        }
+        @keyframes logo-rise {
+            0% {
+                opacity: 0;
+                transform: translateY(0);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(-50px);
+            }
+        }
+
+        /* Дополнительные визуальные элементы */
+        .minecraft-icons {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            gap: 10px;
+        }
+        .minecraft-icons img {
+            width: 40px;
+            height: 40px;
+            animation: float 3s ease-in-out infinite;
+        }
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
+        }
     </style>
 </head>
 <body>
-    <!-- Particles.js Canvas -->
-    <canvas id="particles-js"></canvas>
+    <!-- Падающие блоки -->
+    <div class="falling-blocks" id="fallingBlocks"></div>
 
     <div class="form-container">
         <h2>PLAYLAND</h2>
@@ -184,34 +236,32 @@
             </button>
             <div class="loading-spinner" id="loadingSpinner"></div>
         </form>
-        <div class="portal" id="portal"></div>
+        <img src="https://i.imgur.com/xyz1234.png" alt="Logo" class="logo-animation" id="logoAnimation">
+    </div>
+
+    <!-- Иконки Minecraft -->
+    <div class="minecraft-icons">
+        <img src="https://i.imgur.com/xyz1234.png" alt="Diamond">
+        <img src="https://i.imgur.com/xyz1234.png" alt="Pickaxe">
+        <img src="https://i.imgur.com/xyz1234.png" alt="Creeper">
     </div>
 
     <!-- Подключение Telegram Web App API -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
-        // Настройка particles.js
-        particlesJS('particles-js', {
-            particles: {
-                number: { value: 80, density: { enable: true, value_area: 800 } },
-                color: { value: '#ffffff' },
-                shape: { type: 'circle' },
-                opacity: { value: 0.5, random: false, anim: { enable: false } },
-                size: { value: 3, random: true, anim: { enable: false } },
-                line_linked: { enable: true, distance: 150, color: '#ffffff', opacity: 0.4, width: 1 },
-                move: { enable: true, speed: 2, direction: 'none', random: false, straight: false, out_mode: 'out' }
-            },
-            interactivity: {
-                detect_on: 'canvas',
-                events: { onhover: { enable: true, mode: 'repulse' }, onclick: { enable: true, mode: 'push' } },
-                modes: { repulse: { distance: 100, duration: 0.4 }, push: { particles_nb: 4 } }
-            },
-            retina_detect: true
-        });
+        // Создание падающих блоков
+        const fallingBlocks = document.getElementById('fallingBlocks');
+        for (let i = 0; i < 20; i++) {
+            const block = document.createElement('div');
+            block.classList.add('block');
+            block.style.left = Math.random() * 100 + 'vw';
+            block.style.animationDuration = Math.random() * 5 + 3 + 's';
+            fallingBlocks.appendChild(block);
+        }
 
         const form = document.getElementById('applicationForm');
         const loadingSpinner = document.getElementById('loadingSpinner');
-        const portal = document.getElementById('portal');
+        const logoAnimation = document.getElementById('logoAnimation');
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -231,12 +281,12 @@
                 return;
             }
 
-            // Анимация портала
+            // Анимация логотипа
             setTimeout(() => {
-                portal.style.display = 'block';
-                const audio = new Audio('https://www.soundjay.com/misc/sounds/portal-open.mp3'); // Звук открытия портала
+                logoAnimation.style.display = 'block';
+                const audio = new Audio('https://www.soundjay.com/misc/sounds/whoosh.mp3'); // Звук полёта
                 audio.play();
-            }, 500);
+            }, 1000);
 
             // Отправляем данные в бот через Telegram Web App
             const data = { nickname, discord, reason };
