--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
 
     <!-- Иконки Minecraft -->
     <div class="minecraft-icons">
-        <img src="https://i.imgur.com/xyz1234.png" alt="Diamond">
-        <img src="https://i.imgur.com/xyz1234.png" alt="Pickaxe">
-        <img src="https://i.imgur.com/xyz1234.png" alt="Creeper">
+        <img src="https://i.imgur.com/diamond.png" alt="Diamond">
+        <img src="https://i.imgur.com/pickaxe.png" alt="Pickaxe">
+        <img src="https://i.imgur.com/creeper.png" alt="Creeper">
     </div>
 
     <!-- Подключение Telegram Web App API -->
