--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             margin: 0;
             overflow: hidden;
             font-family: 'Arial', sans-serif;
-            background: url('https://i.imgur.com/xyz1234.jpg') no-repeat center center fixed; /* Текстура травы */
+            background: url('https://i.imgur.com/GrassBlock.jpg') no-repeat center center fixed; /* Текстура травы */
             background-size: cover;
             display: flex;
             justify-content: center;
@@ -38,7 +38,7 @@
             position: absolute;
             width: 50px;
             height: 50px;
-            background: url('https://i.imgur.com/xyz1234.png'); /* Текстура блока */
+            background: url('https://i.imgur.com/FallingBlock.png'); /* Текстура блока */
             background-size: cover;
             animation: fall linear infinite;
         }
@@ -236,14 +236,14 @@
             </button>
             <div class="loading-spinner" id="loadingSpinner"></div>
         </form>
-        <img src="https://i.imgur.com/xyz1234.png" alt="Logo" class="logo-animation" id="logoAnimation">
+        <img src="https://i.imgur.com/MinecraftLogo.png" alt="Logo" class="logo-animation" id="logoAnimation">
     </div>
 
     <!-- Иконки Minecraft -->
     <div class="minecraft-icons">
-        <img src="https://i.imgur.com/diamond.png" alt="Diamond">
-        <img src="https://i.imgur.com/pickaxe.png" alt="Pickaxe">
-        <img src="https://i.imgur.com/creeper.png" alt="Creeper">
+        <img src="https://i.imgur.com/DiamondIcon.png" alt="Diamond">
+        <img src="https://i.imgur.com/PickaxeIcon.png" alt="Pickaxe">
+        <img src="https://i.imgur.com/CreeperIcon.png" alt="Creeper">
     </div>
 
     <!-- Подключение Telegram Web App API -->
