--- a/index.html
+++ b/index.html
@@ -223,10 +223,9 @@
         // Создание падающих блоков
         const fallingBlocks = document.getElementById('fallingBlocks');
         const images = [
-            'images/falling_block.png',
-            'images/diamond_icon.png',
-            'images/pickaxe_icon.png',
-            'images/creeper_icon.png'
+            'images/diamond_icon.jpg',
+            'images/pickaxe_icon.jpg',
+            'images/creeper_icon.webp'
         ];
 
         for (let i = 0; i < 20; i++) {
