--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             bottom: -100px;
             left: 50%;
             transform: translateX(-50%);
-            width: 150px;
+            width: 100px; /* Уменьшенный размер логотипа */
             opacity: 0;
             animation: logo-rise 1s ease-in-out forwards;
         }
