--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Подать заявку | PLAYLAND</title>
-    <!-- Подключение Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Подключение шрифта Press Start 2P -->
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Подключение Font Awesome для иконок -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
@@ -13,7 +13,7 @@
         body {
             margin: 0;
             overflow: hidden;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Press Start 2P', cursive; /* Пиксельный шрифт */
             background: url('images/grass_background.jpg') no-repeat center center fixed; /* Текстура травы */
             background-size: cover;
             display: flex;
@@ -24,28 +24,27 @@
             color: white;
         }
 
-        /* Падающие блоки */
-        .falling-blocks {
+        /* Пиксельные частицы */
+        .pixel-container {
             position: absolute;
-            top: -100px;
+            top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             pointer-events: none;
-            z-index: 1; /* Блоки падают перед фоном, но за формой */
+            z-index: 1;
         }
-        .block {
+        .pixel {
             position: absolute;
-            width: 50px;
-            height: 50px;
-            background-size: cover;
-            opacity: 0.7; /* Прозрачность блоков */
+            width: 10px;
+            height: 10px;
+            background: rgba(255, 255, 255, 0.5);
             animation: fall linear infinite;
         }
         @keyframes fall {
             0% {
                 transform: translateY(-100%);
-                opacity: 0.7;
+                opacity: 1;
             }
             100% {
                 transform: translateY(100vh);
@@ -57,14 +56,15 @@
         .form-container {
             background: rgba(0, 0, 0, 0.7); /* Прозрачный фон */
             padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+            border: 2px solid #000; /* Пиксельная граница */
+            box-shadow: 4px 4px 0px #000; /* Чёткая тень */
+            border-radius: 5px;
             width: 100%;
             max-width: 500px;
             text-align: center;
             position: relative;
             animation: fadeIn 1s ease-in-out;
-            z-index: 2; /* Форма выше падающих блоков */
+            z-index: 2;
         }
         @keyframes fadeIn {
             from {
@@ -79,11 +79,19 @@
 
         /* Заголовок */
         h2 {
-            font-family: 'Courier New', monospace; /* Пиксельный шрифт */
-            font-size: 28px;
+            font-size: 24px;
             color: #ffcc00; /* Цвет как у золотых блоков */
-            text-shadow: 0 0 10px #ffcc00, 0 0 20px #ffcc00;
+            text-shadow: 2px 2px 0px #000; /* Пиксельная тень */
             margin-bottom: 20px;
+            animation: glow 2s infinite alternate; /* Мерцание заголовка */
+        }
+        @keyframes glow {
+            from {
+                text-shadow: 2px 2px 0px #000;
+            }
+            to {
+                text-shadow: 4px 4px 10px #ffcc00;
+            }
         }
 
         /* Поле ввода */
@@ -93,20 +101,23 @@
             text-align: left;
             display: block;
             margin-bottom: 5px;
+            animation: slideIn 0.5s ease-in-out forwards;
         }
         input, textarea {
             width: 100%;
             padding: 12px;
             margin-bottom: 15px;
             border: 2px solid #ffcc00;
-            border-radius: 5px;
+            border-radius: 3px;
             background: rgba(0, 0, 0, 0.5);
             color: white;
+            font-family: 'Press Start 2P', cursive; /* Пиксельный шрифт */
             transition: all 0.3s ease-in-out;
+            animation: fadeIn 1s ease-in-out;
         }
         input:focus, textarea:focus {
             border-color: #00ff00; /* Цвет как у изумрудных блоков */
-            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+            box-shadow: 2px 2px 0px #000; /* Пиксельная тень */
             transform: scale(1.02);
         }
 
@@ -117,12 +128,13 @@
             font-size: 18px;
             background: linear-gradient(135deg, #ffcc00, #ff9900); /* Градиент как у золотых блоков */
             color: white;
-            border: none;
-            border-radius: 5px;
+            border: 2px solid #000; /* Пиксельная граница */
+            border-radius: 3px;
             cursor: pointer;
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
             position: relative;
             overflow: hidden;
+            animation: pulse 2s infinite; /* Пульсация кнопки */
         }
         button::before {
             content: '';
@@ -139,10 +151,21 @@
         }
         button:hover {
             transform: scale(1.05);
-            box-shadow: 0 10px 20px rgba(255, 204, 0, 0.5);
+            box-shadow: 4px 4px 0px #000; /* Пиксельная тень */
         }
         button:active {
             transform: scale(0.98);
+        }
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.02);
+            }
+            100% {
+                transform: scale(1);
+            }
         }
 
         /* Спиннер загрузки */
@@ -152,93 +175,132 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 40px;
-            height: 40px;
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-top: 4px solid #ffcc00;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
+            width: 60px;
+            height: 60px;
         }
-        @keyframes spin {
+        .block {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background: #ffcc00;
+            animation: pixelSpin 1s infinite linear;
+        }
+        .block:nth-child(1) { transform: rotate(0deg) translate(30px); }
+        .block:nth-child(2) { transform: rotate(90deg) translate(30px); }
+        .block:nth-child(3) { transform: rotate(180deg) translate(30px); }
+        .block:nth-child(4) { transform: rotate(270deg) translate(30px); }
+        @keyframes pixelSpin {
             0% {
-                transform: rotate(0deg);
+                transform: rotate(0deg) translate(30px);
             }
             100% {
-                transform: rotate(360deg);
+                transform: rotate(360deg) translate(30px);
             }
+        }
+
+        /* Текст спиннера */
+        .loading-text {
+            position: absolute;
+            bottom: -30px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 14px;
+            color: white;
+            font-family: 'Press Start 2P', cursive;
+            text-shadow: 2px 2px 0px #000; /* Пиксельная тень для текста */
+            background: rgba(0, 0, 0, 0.7); /* Контрастный фон */
+            padding: 5px 10px;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <!-- Падающие блоки -->
-    <div class="falling-blocks" id="fallingBlocks"></div>
+    <!-- Пиксельные частицы -->
+    <div class="pixel-container" id="pixelContainer"></div>
 
+    <!-- Форма -->
     <div class="form-container">
         <h2>PLAYLAND</h2>
-        <p style="font-family: 'Courier New', monospace; font-size: 16px;">Подай заявку и присоединяйся к приключению!</p>
+        <p style="font-size: 14px;">Подай заявку и присоединяйся к приключению!</p>
         <form id="applicationForm">
             <div class="mb-3">
                 <label for="nickname" class="form-label">Никнейм:</label>
-                <input type="text" class="form-control" id="nickname" name="nickname" required>
+                <input type="text" class="form-control" id="nickname" name="nickname" required pattern="^[a-zA-Z0-9_]{3,16}$" title="Только латинские буквы, цифры и символ _. Длина от 3 до 16 символов.">
             </div>
             <div class="mb-3">
-                <label for="discord" class="form-label">Discord-аккаунт:</label>
-                <input type="text" class="form-control" id="discord" name="discord" required>
+                <label for="discord" class="form-label">Discord-аккаунт (необязательно):</label>
+                <input type="text" class="form-control" id="discord" name="discord" pattern="^.{0,32}$" title="Максимум 32 символа.">
             </div>
             <div class="mb-3">
-                <label for="reason" class="form-label">Почему ты хочешь присоединиться?</label>
-                <textarea class="form-control" id="reason" name="reason" rows="4" required></textarea>
+                <label for="reason" class="form-label">Почему ты хочешь присоединиться? (необязательно):</label>
+                <textarea class="form-control" id="reason" name="reason" rows="4" maxlength="500"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">
                 <i class="fas fa-sign-in-alt me-2"></i>Отправить заявку
             </button>
-            <div class="loading-spinner" id="loadingSpinner"></div>
+            <div class="loading-spinner" id="loadingSpinner">
+                <div class="block"></div>
+                <div class="block"></div>
+                <div class="block"></div>
+                <div class="block"></div>
+                <div class="loading-text">Отправка...</div>
+            </div>
         </form>
     </div>
 
     <!-- Подключение Telegram Web App API -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
-        // Создание падающих блоков
-        const fallingBlocks = document.getElementById('fallingBlocks');
-        const images = [
-            'images/diamond_icon.jpg',
-            'images/pickaxe_icon.jpg',
-            'images/creeper_icon.webp'
-        ];
-
-        for (let i = 0; i < 20; i++) {
-            const block = document.createElement('div');
-            block.classList.add('block');
-            block.style.left = Math.random() * 100 + 'vw';
-            block.style.animationDuration = Math.random() * 5 + 3 + 's';
-            block.style.backgroundImage = `url('${images[Math.floor(Math.random() * images.length)]}')`;
-            fallingBlocks.appendChild(block);
+        // Создание пиксельных частиц
+        const pixelContainer = document.getElementById('pixelContainer');
+        for (let i = 0; i < 50; i++) {
+            const pixel = document.createElement('div');
+            pixel.classList.add('pixel');
+            pixel.style.left = Math.random() * 100 + 'vw';
+            pixel.style.animationDuration = Math.random() * 5 + 2 + 's';
+            pixelContainer.appendChild(pixel);
         }
 
+        // Обработка отправки формы
         const form = document.getElementById('applicationForm');
         const loadingSpinner = document.getElementById('loadingSpinner');
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
 
-            // Показываем спиннер загрузки
-            loadingSpinner.style.display = 'block';
-
             // Получаем данные из формы
             const nickname = document.getElementById('nickname').value.trim();
             const discord = document.getElementById('discord').value.trim();
             const reason = document.getElementById('reason').value.trim();
 
-            // Проверяем, что все поля заполнены
-            if (!nickname || !discord || !reason) {
-                alert("Пожалуйста, заполните все поля.");
-                loadingSpinner.style.display = 'none';
+            // Валидация никнейма
+            if (!nickname.match(/^[a-zA-Z0-9_]{3,16}$/)) {
+                alert("Никнейм должен содержать только латинские буквы, цифры и символ _. Длина от 3 до 16 символов.");
                 return;
             }
 
+            // Ограничение длины Discord-аккаунта
+            if (discord.length > 32) {
+                alert("Discord-аккаунт не может быть длиннее 32 символов.");
+                return;
+            }
+
+            // Ограничение длины причины
+            if (reason.length > 500) {
+                alert("Причина не может быть длиннее 500 символов.");
+                return;
+            }
+
+            // Защита от XSS (очистка данных)
+            const sanitizedNickname = DOMPurify.sanitize(nickname);
+            const sanitizedDiscord = DOMPurify.sanitize(discord);
+            const sanitizedReason = DOMPurify.sanitize(reason);
+
+            // Показываем спиннер загрузки
+            loadingSpinner.style.display = 'block';
+
             // Отправляем данные в бот через Telegram Web App
-            const data = { nickname, discord, reason };
+            const data = { nickname: sanitizedNickname, discord: sanitizedDiscord, reason: sanitizedReason };
             console.log("Отправленные данные:", data); // Логирование в консоль
             Telegram.WebApp.sendData(JSON.stringify(data));
             Telegram.WebApp.close();
@@ -249,5 +311,7 @@
             }, 1000);
         });
     </script>
+    <!-- Подключение библиотеки DOMPurify для защиты от XSS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
 </body>
 </html>
