--- a/index.html
+++ b/index.html
@@ -295,6 +295,37 @@
             const sanitizedNickname = DOMPurify.sanitize(nickname);
             const sanitizedDiscord = DOMPurify.sanitize(discord);
             const sanitizedReason = DOMPurify.sanitize(reason);
+            
+                    const form = document.getElementById('applicationForm');
+        const statusMessage = document.getElementById('status');
+
+        form.addEventListener('submit', (event) => {
+            event.preventDefault();
+
+            // Собираем данные из формы
+            const nickname = document.getElementById('nickname').value;
+            const discord = document.getElementById('discord').value;
+            const reason = document.getElementById('reason').value;
+
+            // Создаём JSON-объект
+            const data = {
+                nickname: nickname,
+                discord: discord,
+                reason: reason
+            };
+
+            // Логируем данные
+            console.log("Собранные данные:", data);
+
+            // Отправляем данные в Telegram WebApp
+            if (window.Telegram && window.Telegram.WebApp) {
+                window.Telegram.WebApp.sendData(JSON.stringify(data));
+                console.log("Данные отправлены через Telegram WebApp");
+                statusMessage.textContent = "Заявка отправлена!";
+                window.Telegram.WebApp.close();
+            } else {
+                console.error("Telegram WebApp API недоступен");
+                statusMessage.textContent = "Ошибка: Telegram WebApp API недоступен";
 
             // Показываем спиннер загрузки
             loadingSpinner.style.display = 'block';
