--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             margin: 0;
             overflow-x: hidden;
             font-family: 'Press Start 2P', cursive;
-            background: url('https://i.imgur.com/8UVKBK7.jpg') no-repeat center center fixed;
+            background: url('images/grass_background.jpg') no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
@@ -421,7 +421,7 @@
         
         <!-- Иконка сервера -->
         <div class="logo">
-            <img src="https://i.imgur.com/QME5MyT.png" alt="PLAYLAND" width="80" height="80">
+            <img src="images/playland_logo.png" alt="PLAYLAND" width="80" height="80">
         </div>
         
         <h2>PLAYLAND</h2>
