--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
             try {
                 // Проверка доступности Telegram WebApp API
                 if (!window.Telegram || !window.Telegram.WebApp) {
-                    throw new Error("Telegram WebApp API недоступен.");
+                    throw new Error("Telegram WebApp API недоступен. Откройте форму через Telegram бота.");
                 }
 
                 console.log("✅ Telegram WebApp API доступен для отправки");
@@ -680,14 +680,18 @@
                 console.log("  Причина:", reasonValue);
 
                 // Валидация данных
+                if (!nicknameValue) {
+                    throw new Error("Никнейм обязателен для заполнения");
+                }
+
                 if (!nicknameValue.match(/^[a-zA-Z0-9_]{3,16}$/)) {
                     throw new Error("Никнейм должен содержать только латинские буквы, цифры и символ _. Длина от 3 до 16 символов.");
                 }
 
-                // Очистка данных
-                const sanitizedNickname = DOMPurify.sanitize(nicknameValue);
-                const sanitizedDiscord = DOMPurify.sanitize(discordValue);
-                const sanitizedReason = DOMPurify.sanitize(reasonValue);
+                // Очистка данных (используем простую очистку вместо DOMPurify)
+                const sanitizedNickname = nicknameValue.replace(/[<>]/g, '');
+                const sanitizedDiscord = discordValue.replace(/[<>]/g, '');
+                const sanitizedReason = reasonValue.replace(/[<>]/g, '');
 
                 // Формируем данные для отправки
                 const data = {
@@ -695,7 +699,7 @@
                     discord: sanitizedDiscord,
                     reason: sanitizedReason,
                     timestamp: new Date().toISOString(),
-                    debug: true
+                    source: 'webapp'
                 };
 
                 console.log("📦 Финальные данные для отправки:", data);
@@ -706,23 +710,17 @@
                 addDebugInfo("📦 Данные подготовлены: " + jsonData.length + " символов", 'info');
 
                 // Проверяем функцию sendData
-                if (typeof window.Telegram.WebApp.sendData !== 'function') {
-                    throw new Error("sendData не является функцией");
+                if (!window.Telegram.WebApp.sendData || typeof window.Telegram.WebApp.sendData !== 'function') {
+                    throw new Error("Функция sendData недоступна. Обновите Telegram до последней версии.");
                 }
 
                 console.log("🚀 Вызываем sendData...");
                 addDebugInfo("🚀 Отправляем данные...", 'info');
 
-                // КРИТИЧНО: Отправляем данные БЕЗ задержки
-                try {
-                    window.Telegram.WebApp.sendData(jsonData);
-                    console.log("✅ sendData() вызван успешно!");
-                    addDebugInfo("✅ sendData() вызван!", 'success');
-                } catch (sendError) {
-                    console.error("❌ Ошибка в sendData:", sendError);
-                    addDebugInfo("❌ Ошибка sendData: " + sendError.message, 'error');
-                    throw sendError;
-                }
+                // КРИТИЧНО: Отправляем данные
+                window.Telegram.WebApp.sendData(jsonData);
+                console.log("✅ sendData() вызван успешно!");
+                addDebugInfo("✅ Данные отправлены!", 'success');
 
                 // Скрываем MainButton
                 if (window.Telegram.WebApp.MainButton) {
@@ -730,19 +728,32 @@
                     console.log("✅ MainButton скрыт");
                 }
 
-                // Закрываем Web App через 2 секунды
+                // Показываем сообщение об успехе
+                addDebugInfo("🎉 Заявка отправлена! Закрываем форму...", 'success');
+
+                // Закрываем Web App через 1 секунду
                 setTimeout(() => {
                     console.log("🚪 Закрываем WebApp...");
-                    addDebugInfo("🚪 Закрываем WebApp", 'info');
-                    window.Telegram.WebApp.close();
-                }, 2000);
+                    if (window.Telegram.WebApp.close) {
+                        window.Telegram.WebApp.close();
+                    }
+                }, 1000);
 
             } catch (error) {
                 console.error("❌ Ошибка:", error.message);
                 console.error("❌ Stack trace:", error.stack);
                 addDebugInfo("❌ Ошибка: " + error.message, 'error');
-                alert(`Ошибка: ${error.message}`);
+
+                // Показываем пользователю понятное сообщение
+                const errorMsg = error.message || "Неизвестная ошибка";
+                alert(`❌ Ошибка отправки заявки:\n\n${errorMsg}\n\nПопробуйте еще раз или обратитесь к администратору.`);
+
                 loadingSpinner.style.display = 'none';
+
+                // Показываем MainButton снова
+                if (window.Telegram && window.Telegram.WebApp && window.Telegram.WebApp.MainButton) {
+                    window.Telegram.WebApp.MainButton.show();
+                }
             }
         }
 
